--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -79,40 +79,66 @@
 
 
 <!-- Sección de Contacto y Suscripción -->
-<section class="container-contacto py-5">
+<div class="section-separator"></div>
+<section class="mapsfondo">
+<div class="container pt-5 maps">
+    <h2>Nuestras locaciones</h2>
     <div class="row text-center">
+        
         <div class="col-md-6 mb-4">
             <div class="wow animate__animated animate__bounceInLeft">
-                <div class="card mx-auto" style="max-width: 100%; width: 400px;">
+                <div class="card mx-auto" style="max-width: 100%; width: 100%;">
                     <iframe class="card-img-top" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.106241336407!2d-58.5051893235359!3d-34.65201976005198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9a9fc2dae31%3A0x2dc4ed168580d466!2sAv.%20Juan%20Bautista%20Alberdi%205862%2C%20C1440%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1730381649904!5m2!1ses!2sar" 
                         width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                     <div class="card-body">
-                        <h4 class="card-title">ISA Laboratorios</h4>
-                        <p class="card-text">Ciudad Autónoma de Buenos Aires</p>
+                        <h4 class="card-title">Oficinas administativas</h4>
+                        <p class="card-text">Av. Juan Bautista Alberdi 5862, Ciudad Autónoma de Buenos Aires</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-md-6 text-md-start">
-            <div class="wow animate__animated animate__fadeInRight">
-                <h4>Contáctanos</h4>
-                <p>Dirección: Avda. Juan B. Alberdi Nº 5862, Piso 3 – Dto. D (1440 CUX.) C.A.B.A. Argentina</p>
+        <div class="col-md-6 mb-4">
+            <div class="wow animate__animated animate__bounceInLeft">
+                <div class="card mx-auto" style="max-width: 100%; width: 100%;">
+                    <iframe class="card-img-top" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.99343767331!2d-58.501486723535734!3d-34.65486866020275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc90f5be52191%3A0xb3a1ce891c49a9ec!2sIsa!5e0!3m2!1ses!2sar!4v1736504877938!5m2!1ses!2sar" 
+                        width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                    <div class="card-body">
+                        <h4 class="card-title">Planta De Producción</h4>
+                        <p class="card-text">Av Remedios 5772, Ciudad Autónoma de Buenos Aires</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</section>
+<div class="section-separator"></div>
+
+<!-- Sección de RRHH  -->
+<section class="cierre-contacto">
+    <div class="container pt-5 wow animate__animated animate__fadeInRight">
+        <h2>Contáctanos</h2>
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <h3>Información General</h3>
                 <p>Email: info@isalaboratorios.com.ar</p>
-                <h4>Administración y Ventas</h4>
+            </div>
+            <div class="col-md-4 mb-4">
+                <h3>Administración y Ventas</h3>
                 <p>4683-8888 (líneas rotativas)</p>
                 <p>Atención al consumidor: 0810-666-4306</p>
-                <h4>Recursos Humanos</h4>
+            </div>
+            <div class="col-md-4 mb-4">
+                <h3>Recursos Humanos</h3>
                 <p>Dejanos tu C.V.</p>
                 <p>Email: rrhh@isalaboratorios.com.ar</p>
             </div>
         </div>
     </div>
 </section>
-
-
-
 
 <!--Cierre página-->
 <footer>
