--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- vincular con CSS-->
     <link rel="stylesheet" href="./css/estilos.css">
+    <!-- vincular con JS-->
+    <script defer src="carrusel.productos.js"></script>
     <title>Isa | Laboratorios </title>
 </head>
 <body>
