--- a/pages/producto.html
+++ b/pages/producto.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- vincular con CSS-->
     <link rel="stylesheet" href="../css/estilos.css">
+        <!-- vincular con JS-->
+        <script defer src="carrusel.productos.js"></script>
     <title> Producto ISA </title>
 </head>
 
