--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -62,8 +62,7 @@
 
         <!-- Hero Section con Imagen de Portada y Texto Lateral Derecho -->
         <section
-            class="hero-section-contacto position-relative text-center d-flex align-items-center justify-content-center zoom-image-contacto"
-            style="background-image: url('../multimedia/imagenPlanta.jpg'); background-size: cover; background-position: center; height: 500px;">
+            class="hero-section-contacto position-relative justify-content-center zoom-image-contacto">
             <!-- Caja de contenido sobre la imagen con fondo gris -->
             <div class="container position-relative text-white wow animate__animated animate__bounceInRight">
                 <div class="row align-items-center h-100">
