--- a/pages/medicamentosventalibre.html
+++ b/pages/medicamentosventalibre.html
@@ -64,10 +64,26 @@
     <main>
 
         <!-- Hero Section  -->
+        <section class="hero-section-medicamentosventalibre position-relative zoom-image-medicamentosventalibre">
+            <!-- Caja de contenido sobre la imagen con fondo gris -->
+            <div class="container position-relative text-white wow animate__animated animate__bounceInRight">
+                <div class="row align-items-center h-100">
+                    <!-- Caja contenedora con fondo gris y la imagen lateral -->
+                    <div class="col-md-6 text-start-medicamentosventalibre">
+                        <h1 class="display-4-medicamentosventalibre"> Medicamentos Venta Libre</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <section class="hero-section text-center py-5">
-            <img src="../multimedia/imagenPortadaProductos.png" alt="Medicamentos Venta Libre" class="img-fluid">
-            <h1 class="mt-3">Medicamentos Venta Libre</h1>
+        <section class="pagination">
+            <div class="container mt-3">
+                <h2>Nuestra línea de productos</h2>
+                <ul class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="./productos.html">Productos</a></li>
+                    <li class="breadcrumb-item active">Medicamentos Venta Libre</li>
+                </ul>
+            </div>
         </section>
 
 <!-- Carrusel -->
