--- a/pages/productos.html
+++ b/pages/productos.html
@@ -65,30 +65,25 @@
     <main>
 
         <!-- Hero Section con Imagen de Portada y Texto Lateral Derecho -->
-        <section
-            class="hero-section-productos position-relative text-center d-flex align-items-center justify-content-center"
-            style="background-image: url('../multimedia/imagenPortadaProductos.png'); background-size: cover; background-position: center; height: 500px;">
+        <section class="hero-section-productos position-relative zoom-image-productos">
             <!-- Caja de contenido sobre la imagen con fondo gris -->
             <div class="container position-relative text-white wow animate__animated animate__bounceInRight">
                 <div class="row align-items-center h-100">
                     <!-- Caja contenedora con fondo gris y la imagen lateral -->
                     <div class="col-md-6 text-start-productos">
-                        <h1 class="display-4-productos">Nuestros productos</h1>
-                        <p class="lead-productos">Respaldados por estándares internacionales de calidad y seguridad.         </p>
-                    </div>
-
-                    <!-- Imagen lateral con efecto zoom en escritorio -->
-                    <div class="col-md-6 position-relative p-0">
-                        <img src="../multimedia/packs.Productos.png" alt="Imagen lateral"
-                            class="img-fluid h-100 w-100 object-fit-cover zoom-image-productos">
+                        <h1 class="display-4-productos"> Nuestros Productos </h1>
+                        <p class="display-4-productos"> Respaldados por estándares internacionales de calidad y seguridad. </p>
                     </div>
                 </div>
             </div>
-        </section>
+        </section>        
 
+
+<section class="container-fluid-azul wow animate__animated animate__bounceInLeft">
+    <h3>Conocé toda nuestra línea</h3>
+</section>
 
         <section class="container text-center py-5 wow animate__animated animate__bounceInLeft" id="productos">
-            <h2 class="fw-bold mb-3">Conocé toda nuestra línea</h2>
         
             <!-- Productos -->
             <div class="row justify-content-center">
