--- a/pages/producto.html
+++ b/pages/producto.html
@@ -20,10 +20,19 @@
     <!-- vincular con Animation WOW-->
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DG2QWD493J"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DG2QWD493J');
+    </script>
     <!-- vincular con CSS-->
     <link rel="stylesheet" href="../css/estilos.css">
-        <!-- vincular con JS-->
-        <script defer src="carrusel.productos.js"></script>
+    <!-- vincular con JS-->
+    <script defer src="carrusel.productos.js"></script>
     <title> Producto ISA </title>
 </head>
 
@@ -71,8 +80,8 @@
                 <img id="productImage" alt="Imagen del Producto" class="img-fluid product-zoom">
             </div>
 
-            
-            
+
+
             <div class="container mt-5 product-info wow animate__animated animate__fadeInRight">
                 <!-- Texto arriba de la tabla -->
                 <p id="productDescription" class="lead"></p>
@@ -118,34 +127,34 @@
                     <div class="col-md-8">
                         <div class="product-info">
                             Texto arriba de la tabla -->
-                            <!-- <p id="textAboveTable" class="mb-3"></p>
+        <!-- <p id="textAboveTable" class="mb-3"></p>
                             <p id="textAboveTable2" class="mb-3"></p>
                             <h2 id="table-title-product"></h2>
                             <table class="table">
                                 <thead>
                                     <tr id="tableHeaders"> -->
-                                        <!-- Los encabezados de la tabla se generarán dinámicamente -->
-                                    <!-- </tr>
+        <!-- Los encabezados de la tabla se generarán dinámicamente -->
+        <!-- </tr>
                                 </thead> -->
-                                <!-- <tbody id="productFeatures"> -->
-                                    <!-- Las filas de la tabla se generarán dinámicamente -->
-                                <!-- </tbody>
+        <!-- <tbody id="productFeatures"> -->
+        <!-- Las filas de la tabla se generarán dinámicamente -->
+        <!-- </tbody>
                             </table> -->
 
-                            <!-- Texto debajo de la tabla -->
-                            <!-- <p id="textBelowTable" class="mt-3"></p> -->
+        <!-- Texto debajo de la tabla -->
+        <!-- <p id="textBelowTable" class="mt-3"></p> -->
 
-                            <!-- Línea azul adicional -->
-                            <!-- <div class="blue-line"></div> -->
+        <!-- Línea azul adicional -->
+        <!-- <div class="blue-line"></div> -->
 
-                            <!-- Texto con clase específica -->
-                            <!-- <p id="clarified-text" class="mt-3"></p> -->
+        <!-- Texto con clase específica -->
+        <!-- <p id="clarified-text" class="mt-3"></p> -->
 
-                            <!-- Botón de prospecto -->
-                            <!-- <button id="prospectoButton" class="btn prospecto-btn" onclick="openProspecto()">Ver
+        <!-- Botón de prospecto -->
+        <!-- <button id="prospectoButton" class="btn prospecto-btn" onclick="openProspecto()">Ver
                                 Prospecto</button> -->
-                            <!-- Botón de volver -->
-                            <!-- <a href="./productos.html" id="buyButton" class="btn buy-btn" target="_blank">Volver</a>
+        <!-- Botón de volver -->
+        <!-- <a href="./productos.html" id="buyButton" class="btn buy-btn" target="_blank">Volver</a>
                         </div>
                     </div>
                 </div>
