--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,68 +1,80 @@
 <!DOCTYPE html>
 <!-- español-->
-    <html lang="es">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <!-- Posicionamiento SEO -->
-            <meta name="description"
-                content="Estamos presentes en cada especialidad médica, avalados por estándares internacionales de calidad y seguridad.">
-            <!-- vincular con font awesome para íconos-->
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-                integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-                crossorigin="anonymous" referrerpolicy="no-referrer">
-            <!-- poner el logo pequeño en la pestaña -->
-            <link rel="shortcut icon" href="../multimedia/logo2.png" type="image/x-icon">
-            <!-- vincular con Bootstrap-->
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-                integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-            <!-- vincular con Animation WOW-->
-            <link rel="stylesheet" href="../css/animate.css">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-            <!-- vincular con CSS-->
-            <link rel="stylesheet" href="../css/estilos.css">
-            <title> Contacto </title>
-        </head>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Posicionamiento SEO -->
+    <meta name="description"
+        content="Estamos presentes en cada especialidad médica, avalados por estándares internacionales de calidad y seguridad.">
+    <!-- vincular con font awesome para íconos-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    <!-- poner el logo pequeño en la pestaña -->
+    <link rel="shortcut icon" href="../multimedia/logo2.png" type="image/x-icon">
+    <!-- vincular con Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- vincular con Animation WOW-->
+    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DG2QWD493J"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DG2QWD493J');
+    </script>
+    <!-- vincular con CSS-->
+    <link rel="stylesheet" href="../css/estilos.css">
+
+    <title> Contacto </title>
+</head>
+
 <body>
-<header>
+    <header>
         <!--nav bar inicio-->
         <nav class="navbar navbar-expand-md navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../multimedia/logo.navbar2.png" alt="ISA"
-                style="width: 15%"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end nav-list" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./empresa.html">Nuestra historia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./planta.html">Planta producción</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./productos.html">Nuestros productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
-                </ul>
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="../multimedia/logo.navbar2.png" alt="ISA"
+                        style="width: 15%"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end nav-list" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./empresa.html">Nuestra historia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./planta.html">Planta producción</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./productos.html">Nuestros productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
         </nav>
-    <!--nav bar final-->
+        <!--nav bar final-->
 
-</header>
+    </header>
 
-<main>  
+    <main>
 
         <!-- Hero Section con Imagen de Portada y Texto Lateral Derecho -->
-        <section
-            class="hero-section-contacto position-relative justify-content-center zoom-image-contacto">
+        <section class="hero-section-contacto position-relative justify-content-center zoom-image-contacto">
             <!-- Caja de contenido sobre la imagen con fondo gris -->
             <div class="container position-relative text-white wow animate__animated animate__bounceInRight">
                 <div class="row align-items-center h-100">
@@ -77,86 +89,91 @@
 
 
 
-<!-- Sección de Contacto y Suscripción -->
-<div class="section-separator"></div>
-<section class="mapsfondo">
-<div class="container pt-5 maps">
-    <h2>Nuestras locaciones</h2>
-    <div class="row text-center">
-        
-        <div class="col-md-6 mb-4">
-            <div class="wow animate__animated animate__bounceInLeft">
-                <div class="card mx-auto" style="max-width: 100%; width: 100%;">
-                    <iframe class="card-img-top" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.106241336407!2d-58.5051893235359!3d-34.65201976005198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9a9fc2dae31%3A0x2dc4ed168580d466!2sAv.%20Juan%20Bautista%20Alberdi%205862%2C%20C1440%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1730381649904!5m2!1ses!2sar" 
-                        width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
-                    <div class="card-body">
-                        <h4 class="card-title">Oficinas administativas</h4>
-                        <p class="card-text">Av. Juan Bautista Alberdi 5862, Ciudad Autónoma de Buenos Aires</p>
+        <!-- Sección de Contacto y Suscripción -->
+        <div class="section-separator"></div>
+        <section class="mapsfondo">
+            <div class="container pt-5 maps">
+                <h2>Nuestras locaciones</h2>
+                <div class="row text-center">
+
+                    <div class="col-md-6 mb-4">
+                        <div class="wow animate__animated animate__bounceInLeft">
+                            <div class="card mx-auto" style="max-width: 100%; width: 100%;">
+                                <iframe class="card-img-top"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.106241336407!2d-58.5051893235359!3d-34.65201976005198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9a9fc2dae31%3A0x2dc4ed168580d466!2sAv.%20Juan%20Bautista%20Alberdi%205862%2C%20C1440%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1730381649904!5m2!1ses!2sar"
+                                    width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade">
+                                </iframe>
+                                <div class="card-body">
+                                    <h4 class="card-title">Oficinas administativas</h4>
+                                    <p class="card-text">Av. Juan Bautista Alberdi 5862, Ciudad Autónoma de Buenos Aires
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 mb-4">
+                        <div class="wow animate__animated animate__bounceInLeft">
+                            <div class="card mx-auto" style="max-width: 100%; width: 100%;">
+                                <iframe class="card-img-top"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.99343767331!2d-58.501486723535734!3d-34.65486866020275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc90f5be52191%3A0xb3a1ce891c49a9ec!2sIsa!5e0!3m2!1ses!2sar!4v1736504877938!5m2!1ses!2sar"
+                                    width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade">
+                                </iframe>
+                                <div class="card-body">
+                                    <h4 class="card-title">Planta De Producción</h4>
+                                    <p class="card-text">Av Remedios 5772, Ciudad Autónoma de Buenos Aires</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <div class="section-separator"></div>
 
-        <div class="col-md-6 mb-4">
-            <div class="wow animate__animated animate__bounceInLeft">
-                <div class="card mx-auto" style="max-width: 100%; width: 100%;">
-                    <iframe class="card-img-top" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.99343767331!2d-58.501486723535734!3d-34.65486866020275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc90f5be52191%3A0xb3a1ce891c49a9ec!2sIsa!5e0!3m2!1ses!2sar!4v1736504877938!5m2!1ses!2sar" 
-                        width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
-                    <div class="card-body">
-                        <h4 class="card-title">Planta De Producción</h4>
-                        <p class="card-text">Av Remedios 5772, Ciudad Autónoma de Buenos Aires</p>
+        <!-- Sección de RRHH  -->
+        <section class="cierre-contacto">
+            <div class="container pt-5 wow animate__animated animate__fadeInRight">
+                <h2>Contáctanos</h2>
+                <div class="row">
+                    <div class="col-md-4 mb-4">
+                        <h3>Información General</h3>
+                        <p>Email: info@isalaboratorios.com.ar</p>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <h3>Administración y Ventas</h3>
+                        <p>4683-8888 (líneas rotativas)</p>
+                        <p>Atención al consumidor: 0810-666-4306</p>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <h3>Recursos Humanos</h3>
+                        <p>Dejanos tu C.V.</p>
+                        <p>Email: rrhh@isalaboratorios.com.ar</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-</section>
-<div class="section-separator"></div>
+        </section>
 
-<!-- Sección de RRHH  -->
-<section class="cierre-contacto">
-    <div class="container pt-5 wow animate__animated animate__fadeInRight">
-        <h2>Contáctanos</h2>
-        <div class="row">
-            <div class="col-md-4 mb-4">
-                <h3>Información General</h3>
-                <p>Email: info@isalaboratorios.com.ar</p>
+        <!--Cierre página-->
+        <footer>
+            <div class="row">
+                <div class="col-sm-1 col-md-6">
+                    <img src="../multimedia/logo1.png" alt="Laboratorio" class="mx-auto d-block" style="width:20%">
+                </div>
+                <div class="col-sm-1 col-md-6 cierre">
+                    <ul class="footer-links">
+                        <li><a href="http://pedidos.isalaboratorios.com.ar/pedidos/site/pLogin.php">Intranet</a></li>
+                        <li><a href="#">Contacto</a></li>
+                    </ul>
+                    <h8 class="wow animate__animated animate__rollIn">Todos los derechos reservados</h8>
+                </div>
             </div>
-            <div class="col-md-4 mb-4">
-                <h3>Administración y Ventas</h3>
-                <p>4683-8888 (líneas rotativas)</p>
-                <p>Atención al consumidor: 0810-666-4306</p>
-            </div>
-            <div class="col-md-4 mb-4">
-                <h3>Recursos Humanos</h3>
-                <p>Dejanos tu C.V.</p>
-                <p>Email: rrhh@isalaboratorios.com.ar</p>
-            </div>
-        </div>
-    </div>
-</section>
+        </footer>
 
-<!--Cierre página-->
-<footer>
-    <div class="row">
-        <div class="col-sm-1 col-md-6">
-            <img src="../multimedia/logo1.png" alt="Laboratorio" class="mx-auto d-block" style="width:20%">
-        </div>
-        <div class="col-sm-1 col-md-6 cierre">
-            <ul class="footer-links">
-                <li><a href="http://pedidos.isalaboratorios.com.ar/pedidos/site/pLogin.php">Intranet</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-            <h8 class="wow animate__animated animate__rollIn">Todos los derechos reservados</h8>
-        </div>
-    </div>
-</footer>
-
-<!--Subir de la página-->
-<a href="#" class="subir"><i class="fa-solid fa-upload"></i></a>
+        <!--Subir de la página-->
+        <a href="#" class="subir"><i class="fa-solid fa-upload"></i></a>
 
         <!-- inicia sript de WOW (antes de cerrar body)-->
         <script src="../utilidades/js/wow.min.js"></script>
