--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <!-- español-->
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Posicionamiento SEO -->
-        <meta name="description"
-            content="Estamos presentes en cada especialidad médica, avalados por estándares internacionales de calidad y seguridad.">
-        <!-- vincular con font awesome para íconos-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-            integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-            crossorigin="anonymous" referrerpolicy="no-referrer">
-        <!-- poner el logo pequeño en la pestaña -->
-        <link rel="shortcut icon" href="../multimedia/logo2.png" type="image/x-icon">
-        <!-- vincular con Bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!-- vincular con Animation WOW-->
-        <link rel="stylesheet" href="../css/animate.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <!-- vincular con CSS-->
-        <link rel="stylesheet" href="../css/estilos.css">
-        <title> Nuestra historia </title>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Posicionamiento SEO -->
+    <meta name="description"
+        content="Estamos presentes en cada especialidad médica, avalados por estándares internacionales de calidad y seguridad.">
+    <!-- vincular con font awesome para íconos-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    <!-- poner el logo pequeño en la pestaña -->
+    <link rel="shortcut icon" href="../multimedia/logo2.png" type="image/x-icon">
+    <!-- vincular con Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- vincular con Animation WOW-->
+    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DG2QWD493J"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DG2QWD493J');
+    </script>
+    <!-- vincular con CSS-->
+    <link rel="stylesheet" href="../css/estilos.css">
+    <title> Nuestra historia </title>
+</head>
 
 <body>
     <header>
@@ -30,7 +40,7 @@
         <nav class="navbar navbar-expand-md navbar-dark">
             <div class="container-fluid d-flex">
                 <a class="navbar-brand" href="#"><img src="../multimedia/logo.navbar2.png" alt="ISA"
-                    style="width: 15%"></a>
+                        style="width: 15%"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -61,18 +71,18 @@
     </header>
 
     <main>
-<!-- Hero Section con Video de Fondo -->
-<section class="hero-section position-relative text-center d-flex align-items-center justify-content-center">
-    <!-- Video de fondo -->
-    <video autoplay loop muted playsinline class="position-absolute w-100 h-100" style="object-fit: cover;">
-        <source src="../multimedia/videoBienvenida.mp4" type="video/mp4">
-        Tu navegador no soporta video HTML5.
-    </video>
-    <div class="container position-relative text-white wow animate__animated animate__bounce">
-        <h1 class="display-4-index fw-bold">ISA Laboratorios</h1>
-        <p class="lead-index">Innovación y confianza en el cuidado de tu salud</p>
-    </div>
-</section>
+        <!-- Hero Section con Video de Fondo -->
+        <section class="hero-section position-relative text-center d-flex align-items-center justify-content-center">
+            <!-- Video de fondo -->
+            <video autoplay loop muted playsinline class="position-absolute w-100 h-100" style="object-fit: cover;">
+                <source src="../multimedia/videoBienvenida.mp4" type="video/mp4">
+                Tu navegador no soporta video HTML5.
+            </video>
+            <div class="container position-relative text-white wow animate__animated animate__bounce">
+                <h1 class="display-4-index fw-bold">ISA Laboratorios</h1>
+                <p class="lead-index">Innovación y confianza en el cuidado de tu salud</p>
+            </div>
+        </section>
 
 
         <section>
@@ -80,79 +90,88 @@
             <div class="container mt-3 card-nosotros">
                 <h2 class="wow animate__animated animate__flipInX">Nuestra historia</h2>
                 <div class="wow animate__animated animate__zoomIn">
-                <div class="card">
-                    <div class="card-body card-body-nosotros">
-                        <p>ISA Laboratorios S.A.I.C. comenzó su actividad hace más de 90 años. En 1925 abrió sus puertas desarrollando productos medicinales para el tratamiento de heridas, pomadas cicatrizantes y ungüentos.</p>
-                        <p>En 1962 funda una segunda planta de producción en Capital Federal que le permite acompañar el desarrollo de sus líneas de productos.</p>
-                        <p>En la actualidad, ISA Laboratorios S.A.I.C. es una compañía argentina dedicada completamente al cuidado de la salud, desarrollando y ofreciendo a toda la comunidad y a los profesionales de la salud, soluciones terapéuticas que permitan contribuir con el mejoramiento de la calidad de vida..</p>
-                        <p>En ISA Laboratorios trabajamos con el fin de acercar productos de alta calidad para el cuidado de la salud.</p>
-                        <p>Contamos con dos plantas de elaboración provistas con la última tecnología en procesos productivos y control de calidad, según normas GMP (Good Manufacturing Process).</p>
-                        <p>En ISA laboratorios trabajamos para que naturaleza, ciencia y tecnología estén al servicio de la salud.</p>
+                    <div class="card">
+                        <div class="card-body card-body-nosotros">
+                            <p>ISA Laboratorios S.A.I.C. comenzó su actividad hace más de 90 años. En 1925 abrió sus
+                                puertas desarrollando productos medicinales para el tratamiento de heridas, pomadas
+                                cicatrizantes y ungüentos.</p>
+                            <p>En 1962 funda una segunda planta de producción en Capital Federal que le permite
+                                acompañar el desarrollo de sus líneas de productos.</p>
+                            <p>En la actualidad, ISA Laboratorios S.A.I.C. es una compañía argentina dedicada
+                                completamente al cuidado de la salud, desarrollando y ofreciendo a toda la comunidad y a
+                                los profesionales de la salud, soluciones terapéuticas que permitan contribuir con el
+                                mejoramiento de la calidad de vida..</p>
+                            <p>En ISA Laboratorios trabajamos con el fin de acercar productos de alta calidad para el
+                                cuidado de la salud.</p>
+                            <p>Contamos con dos plantas de elaboración provistas con la última tecnología en procesos
+                                productivos y control de calidad, según normas GMP (Good Manufacturing Process).</p>
+                            <p>En ISA laboratorios trabajamos para que naturaleza, ciencia y tecnología estén al
+                                servicio de la salud.</p>
+                        </div>
                     </div>
-                </div>
                 </div>
             </div>
         </section>
         <!--Cierre Cards-->
 
         <!-- Separador Superior -->
-<div class="section-separator"></div>
+        <div class="section-separator"></div>
 
-<!-- Hero Section con Video de Fondo PLanta Producción -->
-<section class="hero-section position-relative text-center d-flex align-items-center justify-content-center">
-    <!-- Video de fondo -->
-    <video autoplay loop muted playsinline class="position-absolute w-100 h-100" style="object-fit: cover;">
-        <source src="../multimedia/plantaProduccion.mp4" type="video/mp4">
-        Tu navegador no soporta video HTML5.
-    </video>
-    
-    <!-- Contenido sobre el video -->
-    <div class="container position-relative text-white wow animate__animated animate__bounce">
-        <h1 class="display-4-index">Innovación</h1>
-        <p class="lead-index">Tu visión, nuestra experiencia. Juntos, creamos salud.</p>
-        <a href="./planta.html" class="btn btn-primary mt-3 ver-novedades">Nuestra planta</a>
-    </div>
+        <!-- Hero Section con Video de Fondo PLanta Producción -->
+        <section class="hero-section position-relative text-center d-flex align-items-center justify-content-center">
+            <!-- Video de fondo -->
+            <video autoplay loop muted playsinline class="position-absolute w-100 h-100" style="object-fit: cover;">
+                <source src="../multimedia/plantaProduccion.mp4" type="video/mp4">
+                Tu navegador no soporta video HTML5.
+            </video>
 
-<!-- Separador Inferior -->
-<div class="section-separator"></div>
+            <!-- Contenido sobre el video -->
+            <div class="container position-relative text-white wow animate__animated animate__bounce">
+                <h1 class="display-4-index">Innovación</h1>
+                <p class="lead-index">Tu visión, nuestra experiencia. Juntos, creamos salud.</p>
+                <a href="./planta.html" class="btn btn-primary mt-3 ver-novedades">Nuestra planta</a>
+            </div>
+
+            <!-- Separador Inferior -->
+            <div class="section-separator"></div>
 
 
     </main>
 
 
-    
-        <!--Cierre página-->
-        <footer>
-            <div class="row">
-                <div class="col-sm-1 col-md-6">
-                    <img src="../multimedia/logo1.png" alt="Laboratorio" class="mx-auto d-block" style="width:20%">
-                </div>
-                <div class="col-sm-1 col-md-6 cierre">
-                    <ul class="footer-links">
-                        <li><a href="http://pedidos.isalaboratorios.com.ar/pedidos/site/pLogin.php">Intranet</a></li>
-                        <li><a href="./contacto.html">Contacto</a></li>
-                    </ul>
-                    <h8 class="wow animate__animated animate__rollIn">Todos los derechos reservados</h8>
-                </div>
+
+    <!--Cierre página-->
+    <footer>
+        <div class="row">
+            <div class="col-sm-1 col-md-6">
+                <img src="../multimedia/logo1.png" alt="Laboratorio" class="mx-auto d-block" style="width:20%">
             </div>
-        </footer>
+            <div class="col-sm-1 col-md-6 cierre">
+                <ul class="footer-links">
+                    <li><a href="http://pedidos.isalaboratorios.com.ar/pedidos/site/pLogin.php">Intranet</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
+                </ul>
+                <h8 class="wow animate__animated animate__rollIn">Todos los derechos reservados</h8>
+            </div>
+        </div>
+    </footer>
 
-        <!--Subir de la página-->
-        <a href="#" class="subir"><i class="fa-solid fa-upload"></i></a>
+    <!--Subir de la página-->
+    <a href="#" class="subir"><i class="fa-solid fa-upload"></i></a>
 
-        <!-- inicia sript de WOW (antes de cerrar body)-->
-        <script src="../utilidades/js/wow.min.js"></script>
-        <script>new WOW().init();</script>
-        <!-- inicia sript de BS (antes de cerrar body)-->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-            crossorigin="anonymous"></script>
+    <!-- inicia sript de WOW (antes de cerrar body)-->
+    <script src="../utilidades/js/wow.min.js"></script>
+    <script>new WOW().init();</script>
+    <!-- inicia sript de BS (antes de cerrar body)-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 
-        <!-- inicia sript de productos -->
-        <script src="carrusel.productos.js"></script>
+    <!-- inicia sript de productos -->
+    <script src="carrusel.productos.js"></script>
 </body>
 
 </html>
