--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,8 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Posicionamiento SEO -->
-    <meta name="description"
-        content="Respaldados por estándares internacionales de calidad y seguridad. .">
+    <meta name="description" content="Respaldados por estándares internacionales de calidad y seguridad. .">
     <!-- vincular con font awesome para íconos-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -20,10 +19,19 @@
     <!-- vincular con Animation WOW-->
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DG2QWD493J"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DG2QWD493J');
+    </script>
     <!-- vincular con CSS-->
     <link rel="stylesheet" href="../css/estilos.css">
-        <!-- vincular con JS-->
-        <script defer src="carrusel.productos.js"></script>
+    <!-- vincular con JS-->
+    <script defer src="carrusel.productos.js"></script>
     <title> Productos ISA </title>
 </head>
 
@@ -33,7 +41,7 @@
         <nav class="navbar navbar-expand-md navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="../multimedia/logo.navbar2.png" alt="ISA"
-                    style="width: 15%"></a>
+                        style="width: 15%"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -72,25 +80,27 @@
                     <!-- Caja contenedora con fondo gris y la imagen lateral -->
                     <div class="col-md-6 text-start-productos">
                         <h1 class="display-4-productos"> Nuestros Productos </h1>
-                        <p class="display-4-productos"> Respaldados por estándares internacionales de calidad y seguridad. </p>
+                        <p class="display-4-productos"> Respaldados por estándares internacionales de calidad y
+                            seguridad. </p>
                     </div>
                 </div>
             </div>
-        </section>        
+        </section>
 
 
-<section class="container-fluid-azul wow animate__animated animate__bounceInLeft">
-    <h4>Conocé toda nuestra línea</h4>
-</section>
+        <section class="container-fluid-azul wow animate__animated animate__bounceInLeft">
+            <h4>Conocé toda nuestra línea</h4>
+        </section>
 
         <section class="container text-center py-5 wow animate__animated animate__bounceInLeft" id="productos">
-        
+
             <!-- Productos -->
             <div class="row justify-content-center">
                 <div class="col-6 col-md-4 mb-4 wow animate__animated animate__bounceIn" data-wow-delay="0.2s">
                     <a href="./suplementosdietarios.html?category=suplementosdietarios">
                         <div class="division-icon mb-2">
-                            <img src="../multimedia/suplementos.dietarios.png" alt="Suplementos Dietarios" class="img-fluid">
+                            <img src="../multimedia/suplementos.dietarios.png" alt="Suplementos Dietarios"
+                                class="img-fluid">
                         </div>
                         <h5 class="fw-bold-productos">Suplementos dietarios</h5>
                         <div class="divider-1 mt-2" style="width: 40px; height: 4px; margin: 0 auto;"></div>
@@ -99,7 +109,8 @@
                 <div class="col-6 col-md-4 mb-4 wow animate__animated animate__bounceIn" data-wow-delay="0.4s">
                     <a href="./medicamentosventalibre.html?category=medicamentosventalibre">
                         <div class="division-icon mb-2">
-                            <img src="../multimedia/venta.libre.png" alt="Medicamentos de Venta Libre" class="img-fluid">
+                            <img src="../multimedia/venta.libre.png" alt="Medicamentos de Venta Libre"
+                                class="img-fluid">
                         </div>
                         <h5 class="fw-bold-productos">Medicamentos de Venta Libre</h5>
                         <div class="divider-2 mt-2" style="width: 40px; height: 4px; margin: 0 auto;"></div>
@@ -108,7 +119,8 @@
                 <div class="col-6 col-md-4 mb-4 wow animate__animated animate__bounceIn" data-wow-delay="0.6s">
                     <a href="./medicamentosventabajoreceta.html?category=medicamentosventabajoreceta">
                         <div class="division-icon mb-2">
-                            <img src="../multimedia/venta.bajoreceta.png" alt="Medicamentos de Venta Bajo Receta" class="img-fluid">
+                            <img src="../multimedia/venta.bajoreceta.png" alt="Medicamentos de Venta Bajo Receta"
+                                class="img-fluid">
                         </div>
                         <h5 class="fw-bold-productos">Medicamentos de Venta Bajo Receta</h5>
                         <div class="divider-3 mt-2" style="width: 40px; height: 4px; margin: 0 auto;"></div>
@@ -116,7 +128,7 @@
                 </div>
             </div>
         </section>
-        
+
 
 
 
