--- a/pages/suplementosdietarios.html
+++ b/pages/suplementosdietarios.html
@@ -19,6 +19,15 @@
     <!-- vincular con Animation WOW-->
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DG2QWD493J"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DG2QWD493J');
+    </script>
     <!-- vincular con CSS-->
     <link rel="stylesheet" href="../css/estilos.css">
     <!-- vincular con JS-->
