--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,17 +21,16 @@
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DG2QWD493J"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RY8J17WW81"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-DG2QWD493J');
+        gtag('config', 'G-RY8J17WW81');
     </script>
     <!-- vincular con CSS-->
     <link rel="stylesheet" href="../css/estilos.css">
-
     <title> Contacto </title>
 </head>
 
