--- a/pages/medicamentosventabajoreceta.html
+++ b/pages/medicamentosventabajoreceta.html
@@ -79,7 +79,7 @@
                 <div class="row align-items-center h-100">
                     <!-- Caja contenedora con fondo gris y la imagen lateral -->
                     <div class="col-md-6 text-start-medicamentos">
-                        <h1 class="display-4-medicamentos"> Medicamentos Venta Libre</h1>
+                        <h1 class="display-4-medicamentos"> Medicamentos Venta Bajo Receta</h1>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 <h2>Nuestra línea de productos</h2>
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href="./productos.html">Productos</a></li>
-                    <li class="breadcrumb-item active">Medicamentos Venta Libre</li>
+                    <li class="breadcrumb-item active">Medicamentos Venta Bajo Receta</li>
                 </ul>
             </div>
         </section>
