--- a/pages/medicamentosventalibre.html
+++ b/pages/medicamentosventalibre.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <!-- vincular con JS-->
     <script defer src="carrusel.productos.js"></script>
-    <title> Medicamentos Venta Libre | Productos ISA </title>
+    <title> Medicamentos de Venta Libre | Productos ISA </title>
 </head>
 
 <body>
