--- a/pages/planta.html
+++ b/pages/planta.html
@@ -156,7 +156,7 @@
                                 <h3>Dia D | Suplemento vitamina D</h3>
                                 <p>Aumenta tus niveles de vitamina D con nuestra fórmula comprobada y de alta calidad.
                                 </p>
-                                <a href="./pages/productos.html" class="btn btn-primary mt-3 ver-producto">Ver
+                                <a href="./productos.html" class="btn btn-primary mt-3 ver-producto">Ver
                                     producto</a>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                                 <h3>Buenas Noches | Medicamento</h3>
                                 <p>Despertá renovado cada mañana, la dosis óptima de melatonina para un sueño reparador.
                                 </p>
-                                <a href="./pages/productos.html" class="btn btn-primary mt-3 ver-producto">Ver
+                                <a href="./productos.html" class="btn btn-primary mt-3 ver-producto">Ver
                                     producto</a>
                             </div>
                         </div>
@@ -194,7 +194,7 @@
                                 <h3>Veg12 | Suplemento vitamina B12</h3>
                                 <p>Aumenta tus niveles de vitamina B12 con nuestra fórmula comprobada y de alta calidad.
                                 </p>
-                                <a href="./pages/productos.html" class="btn btn-primary mt-3 ver-producto">Ver
+                                <a href="./productos.html" class="btn btn-primary mt-3 ver-producto">Ver
                                     producto</a>
                             </div>
                         </div>
