--- a/pages/planta.html
+++ b/pages/planta.html
@@ -92,42 +92,38 @@
             <div class="container mt-3 card-nosotros">
                 <h2 class="wow animate__animated animate__flipInX">Nuestra planta de producción</h2>
                 <div class="wow animate__animated animate__zoomIn">
-                    <div class="card">
-                        <div class="card-body card-body-nosotros">
-                            <h4>Tu socio estratégico en la producción de medicamentos</h4>
-                            <p>Nuestra planta no es solo un lugar donde se fabrican medicamentos; es un centro de
-                                excelencia diseñado para transformar tus ideas en productos de clase mundial.</p>
-
-                            <h4>¿Por qué elegirnos?</h4>
-
-                            <p>1. Infraestructura de vanguardia
-                                Contamos con instalaciones diseñadas bajo los más altos estándares internacionales (GMP,
-                                FDA, EMA), garantizando un entorno seguro y controlado para cada etapa de la producción.
-                                Desde la síntesis de principios activos hasta el envasado final, cada detalle ha sido
-                                pensado para asegurar la calidad que tu marca merece.
-
-                                2. Versatilidad y escalabilidad
-                                ¿Pequeñas series o grandes volúmenes? Nuestra planta se adapta a tus necesidades. Con
-                                líneas de producción flexibles y un equipo técnico especializado, somos capaces de
-                                fabricar una amplia gama de formas farmacéuticas: comprimidos, cápsulas, jarabes,
-                                inyectables y más.
-
-                                3. Tecnología de última generación
-                                Empleamos sistemas automatizados de monitoreo y control, asegurando precisión en cada
-                                lote producido. Nuestro sistema HVAC avanzado garantiza un entorno limpio y
-                                esterilizado, cumpliendo con las normativas más estrictas.
-
-                                4. Tu marca, nuestra prioridad
-                                Sabemos que cada marca tiene su propio ADN. Por eso, trabajamos en estrecha colaboración
-                                contigo para garantizar que el producto final no solo cumpla, sino que supere tus
-                                expectativas.</p>
-
-                            <h4>Nuestro compromiso: calidad y confianza</h4>
-                            <p>Marcas líderes ya nos eligen como su socio estratégico, confiando en nuestra experiencia
-                                y dedicación para llevar sus productos al mercado con la máxima calidad.</p>
-
-                            <h5>Descubre cómo podemos ser parte del éxito de tu marca. Ponte en contacto con nosotros y
-                                hablemos de tus necesidades de producción. </h5>
+                    <div class="container my-5">
+                        <div class="row g-3 gallery">
+                            <div class="col-6 col-md-4" *ngFor="let img of images">
+                                <div class="image-wrapper">
+                                    <img src="../multimedia/planta1.jpg" alt="Imagen" class="img-fluid" />
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-4" *ngFor="let img of images">
+                                <div class="image-wrapper">
+                                    <img src="../multimedia/planta2.jpg" alt="Imagen" class="img-fluid" />
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-4" *ngFor="let img of images">
+                                <div class="image-wrapper">
+                                    <img src="../multimedia/planta3.jpg" alt="Imagen" class="img-fluid" />
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-4" *ngFor="let img of images">
+                                <div class="image-wrapper">
+                                    <img src="../multimedia/planta4.jpg" alt="Imagen" class="img-fluid" />
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-4" *ngFor="let img of images">
+                                <div class="image-wrapper">
+                                    <img src="../multimedia/planta5.jpg" alt="Imagen" class="img-fluid" />
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-4" *ngFor="let img of images">
+                                <div class="image-wrapper">
+                                    <img src="../multimedia/planta6.jpg" alt="Imagen" class="img-fluid" />
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
